@@ -1,5 +1,5 @@
 %------------------------------------------
-%       $Id: GMT_Tutorial.tex,v 1.69 2010-06-22 06:41:31 guru Exp $
+%       $Id: GMT_Tutorial.tex,v 1.70 2010-10-09 22:26:20 guru Exp $
 %
 %       The GMT Documentation Project
 %       Copyright 2000-2010.
@@ -56,8 +56,8 @@ Version 2.0 was released with an article in EOS, October 1991, and
 quickly spread worldwide.  We obtained NSF-funding for \GMT\
 version 3.0 in 1993 which was released with another article in EOS
 on August 15, 1995.  Significantly improved versions (3.1-3.3,
-3.3.1--6), 3.4, 3.4.1--5, and 4.0--4.5.2 were released between November 1998 and
-January 2010, culminating in the \GMTDOCDATE\ introduction of \GMTDOCVERSION.
+3.3.1--6), 3.4, 3.4.1--5, and 4.0--4.5.3 were released between November 1998 and
+July 2010, culminating in the \GMTDOCDATE\ introduction of \GMTDOCVERSION.
 \GMT\ now is used by $\sim$15,000 users worldwide in a broad range of disciplines.
 
 \subsection*{Philosophy}
