@@ -1,8 +1,8 @@
-	$Id: README.GMT,v 1.32 2010-06-22 22:27:21 guru Exp $
+	$Id: README.GMT,v 1.33 2010-10-09 22:26:20 guru Exp $
 
 Dear potential GMT users-
 
-Version 4.5.3 of GMT has recently been released.
+Version 4.5.4 of GMT has recently been released.
 GMT can be installed under Unix or Windows.
 
 For new installers of GMT under a Unix-like OS:
