@@ -1,5 +1,5 @@
 <HTML>
-<!--  $Id: gmt_faq.html,v 1.34 2010-08-27 18:00:27 guru Exp $  -->
+<!--  $Id: gmt_faq.html,v 1.35 2010-10-09 22:26:20 guru Exp $  -->
 <TITLE>GMT - Frequently Asked GMT Questions</TITLE>
 <BODY bgcolor="#ffffff">
 
@@ -10,7 +10,7 @@
 <LI>	<A> Who developed GMT ? </A>
 <P>GMT was created in 1988 by <A HREF="http://www.soest.hawaii.edu/pwessel/index.html">Paul Wessel</A>
 and <A HREF="http://ibis.grdl.noaa.gov/SAT/people/walter.html">Walter H. F. Smith</A>, and has undergone
-several revisions and major enhancements since then.  The current version is 4.5.3.
+several revisions and major enhancements since then.  The current version is 4.5.4.
 GMT is supported by the National Science Foundation.</P></LI>
 <HR>
 <LI>	<A> Who is using GMT ? </A>
