@@ -1,11 +1,11 @@
 <HTML>
-<!--  $Id: gmt_install_form.html,v 1.85 2010-07-11 07:44:53 guru Exp $  -->
+<!--  $Id: gmt_install_form.html,v 1.86 2010-10-09 22:26:20 guru Exp $  -->
 <HEAD>
 <TITLE>GMT Installation Helper</TITLE>
 </HEAD>
 <BODY bgcolor="#ffffff">
 <FORM ACTION="/cgi-bin/install_gmt_form.pl" ENCTYPE="x-www-form-encoded" METHOD="POST">
-<INPUT TYPE="hidden" VALUE="$Revision: 1.85 $" NAME="form_version">
+<INPUT TYPE="hidden" VALUE="$Revision: 1.86 $" NAME="form_version">
 <H2><CENTER>GMT Installation Helper</CENTER></H2>
 </P>
 This page helps you customize the GMT installation procedure under Unix or Unix-like
@@ -272,12 +272,12 @@ Custom make program: <INPUT NAME="custom_make" TYPE="text" SIZE="30"><BR>
 
 <I><P>
 Note: The installation will install all GMT components in several subdirectories
-under one root directory.  By default, GMT will be installed under GMT4.5.3
+under one root directory.  By default, GMT will be installed under GMT4.5.4
 in the current working directory where install_gmt.sh is run.
 On most Unix systems, however, the preferred location of the root directory will be
 something like /usr/local or /sw, under which the installation will add
 bin, lib, include, share, share/man, and share/doc/gmt, respectively.
-To select another location for the root directory than the default (GMT4.5.3),
+To select another location for the root directory than the default (GMT4.5.4),
 specify it in the first box above, or enter subdirectories individually.
 Only specify alternative directories if you want to place the files elsewhere. 
 <P>
